<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_balance_sneakers">New balance Sneakers</string>
    <string name="product_price">$ %1$s,00</string>
    <string name="description_text">Features waterproof, fire, air resistant shoes. all changed when the country of fire attacked</string>
    <string name="rating_value">%.1f</string>
    <string name="reviews_value">(%1$s reviews)</string>
    <string name="color">Color:</string>
    <string name="quantity">Quantity:</string>
    <string name="general_sum_value">$ %1$s</string>
    <string name="add_to_chart">Add to chart</string>
    <string name="send_to">Send to:</string>
    <string name="share_to">Share to:</string>
    <string name="start_price_cart">$ 0</string>
    <string name="icon_minus_desc">Icon minus</string>
    <string name="icon_plus_desc">Icon plus</string>
    <string name="rating_icon_desc">Icon of rating(star)</string>
    <string name="product_image_desc">Image of product</string>
    <string name="go_back_button_desc">Icon of go back button</string>
    <string name="main_photo_desc">Main image of product</string>
    <string name="favourites_button_desc">Image of button add to favourites</string>
    <string name="separate_line_desc">Image of separate line between buttons</string>
    <string name="share_button_desc">Image of share button</string>
    <string name="gallery_photo_desc">Gallery Image of product</string>
</resources>