<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/main_photo_item_height_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:gravity="center">

    <ImageView
        android:id="@+id/mainPhotoImageView"
        android:layout_width="@dimen/main_photo_item_width_main_photo"
        android:layout_height="@dimen/main_photo_item_height_main_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        tools:src="@drawable/photo_main_example"
        android:contentDescription="@string/main_photo_desc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/main_photo_item_width_buttons_container"
        android:layout_height="@dimen/main_photo_item_height_buttons_container"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/main_photo_item_margin_button_buttons_container"
        android:background="@drawable/share_favorites_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mainPhotoImageView"
        app:layout_constraintStart_toEndOf="@+id/mainPhotoImageView">


        <ImageView
            android:id="@+id/favouritesButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_add_to_favourites"
            app:layout_constraintBottom_toTopOf="@id/separateLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/main_photo_item_margin_start_fav_button"
            android:layout_marginEnd="@dimen/main_photo_item_margin_end_fav_button"
            android:contentDescription="@string/favourites_button_desc" />

        <ImageView
            android:id="@+id/separateLine"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_photo_item_height_sep_line"
            android:layout_marginStart="@dimen/main_photo_item_margin_start_sep_line"
            android:layout_marginEnd="@dimen/main_photo_item_margin_end_sep_line"
            android:layout_marginTop="@dimen/main_photo_item_margin_top_sep_line"
            android:layout_marginBottom="@dimen/main_photo_item_margin_bottom_sep_line"
            android:src="@drawable/separate_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/separate_line_desc" />

        <ImageView
            android:id="@+id/shareButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separateLine"
            android:layout_marginStart="@dimen/main_photo_item_margin_start_share_button"
            android:layout_marginEnd="@dimen/main_photo_item_margin_end_share_button"
            android:contentDescription="@string/share_button_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>